--- a/charts/eso-clustersecretstore/templates/clustersecretstore.yaml
+++ b/charts/eso-clustersecretstore/templates/clustersecretstore.yaml
@@ -22,3 +22,19 @@ spec:
               namespace: {{ .Values.namespace }}
             # `expirationSeconds` defaults to 10 minutes if not supplied
             expirationSeconds: {{ .Values.vault.auth.jwt.expiration }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: {{ .Values.vault.auth.jwt.sa }}-auth-delegator
+  labels:
+    app: {{ .Values.vault.server }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+roleRef:
+  kind: ClusterRole
+  apiGroup: rbac.authorization.k8s.io
+  name: system:auth-delegator
+subjects:
+- kind: ServiceAccount
+  name: {{ .Values.vault.auth.jwt.sa }}
+  namespace: {{ .Values.namespace }}
