--- a/charts/awx-operator-externalsecret/values.yaml
+++ b/charts/awx-operator-externalsecret/values.yaml
@@ -4,3 +4,22 @@ key: "randomkey"
 awx-operator-helm:
 #Look at defaults from here: https://github.com/ansible/awx-operator
 #When deploying this helm chart prefix the key you want with awx-operator-helm
+  AWX: 
+    # enable use of awx-deploy template
+    enabled: false
+    name: awx
+    spec:
+      admin_user: admin
+
+    # configurations for external postgres instance
+    #postgres:
+    #  enabled: false
+    #  host: Unset
+    #  port: 5678
+    #  dbName: Unset
+    #  username: admin
+      # for secret management, pass in the password independently of this file
+      # at the command line, use --set AWX.postgres.password
+    #  password: Unset
+    #  sslmode: prefer
+    #  type: unmanaged
