--- a/charts/ara/templates/deployment.yaml
+++ b/charts/ara/templates/deployment.yaml
@@ -46,35 +46,29 @@ spec:
         ports:
           - containerPort: 8000
         livenessProbe:
-          httpGet:
-            port: 8000
-            path: /api/v1/
-            httpHeaders:
-              - name: Host
-                value: {{ $.Values.ingress.host }}
-          initialDelaySeconds: 30
+          exec:
+            command:
+            - ara-manage
+            - health_check
+          initialDelaySeconds: 5
           failureThreshold: 3
           timeoutSeconds: 1
           periodSeconds: 10
         readinessProbe:
-          httpGet:
-            port: 8000
-            path: /api/v1/
-            httpHeaders:
-              - name: Host
-                value: {{ $.Values.ingress.host }}
-          initialDelaySeconds: 30
+          exec:
+            command:
+            - ara-manage
+            - health_check
+          initialDelaySeconds: 5
           failureThreshold: 3
           timeoutSeconds: 1
           periodSeconds: 10
         startupProbe:
-          httpGet:
-            port: 8000
-            path: /api/v1/
-            httpHeaders:
-              - name: Host
-                value: {{ $.Values.ingress.host }}
-          initialDelaySeconds: 30
+          exec:
+            command:
+            - ara-manage
+            - health_check
+          initialDelaySeconds: 5
           failureThreshold: 30
           timeoutSeconds: 1
       volumes:
