--- a/charts/ara/values.yaml
+++ b/charts/ara/values.yaml
@@ -37,7 +37,7 @@ ingress:
     host: ara.domain
 # Resource limits/request
 resources: {}
-
+replicas: 1
 # Persistent volume for SQLite DB:
 persistentVolumes:
   enabled: false
