Add Secret creation to eso-clustersecretstore helm chart

--- a/charts/eso-clustersecretstore/templates/clustersecretstore.yaml
+++ b/charts/eso-clustersecretstore/templates/clustersecretstore.yaml
@@ -35,3 +35,12 @@ subjects:
 - kind: ServiceAccount
   name: {{ .Values.vault.auth.jwt.sa }}
   namespace: {{ .Values.namespace }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Values.vault.auth.jwt.sa }}-token
+  namespace: {{ .Values.namespace }}
+  annotations:
+    kubernetes.io/service-account.name: {{ .Values.vault.auth.jwt.sa }}
+type: kubernetes.io/service-account-token
