--- a/charts/opentelemetry-collector/values.yaml
+++ b/charts/opentelemetry-collector/values.yaml
@@ -1,4 +1,14 @@
-
+## Create externalsecret for opentelemetry connector
+externalsecret:
+  # Secret name
+  name: ""
+  # Secret key
+  key: ""
+  remote:
+    # Path to key in vault
+    key: ""
+    # Key property
+    property: ""
 
 ## Using default values from https://github.com/open-telemetry/opentelemetry-helm-charts/blob/main/charts/opentelemetry-collector/values.yaml
 ##
