--- a/charts/opentelemetry-collector/Chart.yaml
+++ b/charts/opentelemetry-collector/Chart.yaml
@@ -1,14 +1,14 @@
----
 apiVersion: v2
 name: opentelemetry-collector
-version: 0.1.6
-description: Wrapper chart for OpenTelemetry Collector Helm chart for Kubernetes
+version: 0.55.0
+description: OpenTelemetry Collector Helm chart for Kubernetes
 type: application
 home: https://opentelemetry.io/
+sources:
+  - https://github.com/open-telemetry/opentelemetry-collector
+  - https://github.com/open-telemetry/opentelemetry-collector-contrib
+maintainers:
+  - name: dmitryax
+  - name: TylerHelmuth
 icon: https://opentelemetry.io/img/logos/opentelemetry-logo-nav.png
-
-dependencies:
-  - name: opentelemetry-collector
-    alias: opentelemetry-collector
-    version: 0.55.0
-    repository: https://open-telemetry.github.io/opentelemetry-helm-charts
+appVersion: 0.75.0
