--- a/charts/eso-clustersecretstore/templates/clustersecretstore.yaml
+++ b/charts/eso-clustersecretstore/templates/clustersecretstore.yaml
@@ -1,46 +1,48 @@
+{{- range .Values.vaults }}
 apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
-  name: {{ .Values.name }}
+  name: {{ .name }}
 spec:
   provider:
     vault:
-      server: {{ .Values.vault.server }}
-      path: {{ .Values.vault.path }}
-      version: {{ .Values.vault.version }}
+      server: {{ .vault.server }}
+      path: {{ .vault.path }}
+      version: {{ .vault.version }}
       auth:
         # VaultJwt authenticates with Vault using the JWT/OIDC auth mechanism
         # https://www.vaultproject.io/docs/auth/jwt
         jwt:
           # Path where the JWT authentication backend is mounted
-          path: {{ .Values.vault.auth.jwt.path }}
+          path: {{ .vault.auth.jwt.path }}
           # JWT role configured in a Vault server, optional.
-          role: {{ .Values.vault.auth.jwt.role }}
+          role: {{ .vault.auth.jwt.role }}
           kubernetesServiceAccountToken:
             serviceAccountRef:
-              name: {{ .Values.vault.auth.jwt.sa }}
-              namespace: {{ .Values.namespace }}
+              name: {{ .vault.auth.jwt.sa }}
+              namespace: {{ .namespace }}
             # `expirationSeconds` defaults to 10 minutes if not supplied
-            expirationSeconds: {{ .Values.vault.auth.jwt.expiration }}
+            expirationSeconds: {{ .vault.auth.jwt.expiration }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Values.vault.auth.jwt.sa }}-auth-delegator
+  name: {{ .vault.auth.jwt.sa }}-auth-delegator
 roleRef:
   kind: ClusterRole
   apiGroup: rbac.authorization.k8s.io
   name: system:auth-delegator
 subjects:
 - kind: ServiceAccount
-  name: {{ .Values.vault.auth.jwt.sa }}
-  namespace: {{ .Values.namespace }}
+  name: {{ .vault.auth.jwt.sa }}
+  namespace: {{ .namespace }}
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.vault.auth.jwt.sa }}-token
-  namespace: {{ .Values.namespace }}
+  name: {{ .vault.auth.jwt.sa }}-token
+  namespace: {{ .namespace }}
   annotations:
-    kubernetes.io/service-account.name: {{ .Values.vault.auth.jwt.sa }}
+    kubernetes.io/service-account.name: {{ .vault.auth.jwt.sa }}
 type: kubernetes.io/service-account-token
+{{- end }}
