--- a/charts/eso-clustersecretstore/values.yaml
+++ b/charts/eso-clustersecretstore/values.yaml
@@ -1,15 +1,16 @@
-name: "vault-backend"
-namespace: "external-secrets"
-vault: 
-  server: "https://vault.cloud.com:8200"
-  path: "secret"
-  version: "v1"
-  auth:
-    jwt:
-      path: "auth-path"
-      role: "rolename"
-      sa: "vault-external-secrets-operator"
-      expiration: 600
+vaults:
+  - name: "vault-backend"
+    namespace: "external-secrets"
+    vault: 
+      server: "https://vault.cloud.com:8200"
+      path: "secret"
+      version: "v1"
+      auth:
+        jwt:
+          path: "auth-path"
+          role: "rolename"
+          sa: "vault-external-secrets-operator"
+          expiration: 600
 
 external-secrets-operator:
 # defaults from original helm chart https://artifacthub.io/packages/helm/external-secrets-operator/external-secrets?modal=values
