Allow configuring secretstores using both old and new way

--- a/charts/eso-clustersecretstore/templates/clustersecretstore.yaml
+++ b/charts/eso-clustersecretstore/templates/clustersecretstore.yaml
@@ -1,4 +1,5 @@
-{{- range .Values.vaults }}
+{{- if .Values.vault.vaults }}
+{{- range .Values.vault.vaults }}
 apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
@@ -6,44 +7,93 @@ metadata:
 spec:
   provider:
     vault:
-      server: {{ .vault.server }}
-      path: {{ .vault.path }}
-      version: {{ .vault.version }}
+      server: {{ .server }}
+      path: {{ .path }}
+      version: {{ .version }}
       auth:
         # VaultJwt authenticates with Vault using the JWT/OIDC auth mechanism
         # https://www.vaultproject.io/docs/auth/jwt
         jwt:
           # Path where the JWT authentication backend is mounted
-          path: {{ .vault.auth.jwt.path }}
+          path: {{ $.vault.auth.jwt.path }}
           # JWT role configured in a Vault server, optional.
-          role: {{ .vault.auth.jwt.role }}
+          role: {{ $.vault.auth.jwt.role }}
           kubernetesServiceAccountToken:
             serviceAccountRef:
-              name: {{ .vault.auth.jwt.sa }}
-              namespace: {{ .namespace }}
+              name: {{ $.vault.auth.jwt.sa }}
+              namespace: {{ $.vault.auth.jwt.sanamespace }}
             # `expirationSeconds` defaults to 10 minutes if not supplied
-            expirationSeconds: {{ .vault.auth.jwt.expiration }}
+            expirationSeconds: {{ $.vault.auth.jwt.expiration }}
 ---
+{{- end }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .vault.auth.jwt.sa }}-auth-delegator
+  name: {{ $.vault.auth.jwt.sa }}-auth-delegator
 roleRef:
   kind: ClusterRole
   apiGroup: rbac.authorization.k8s.io
   name: system:auth-delegator
 subjects:
 - kind: ServiceAccount
-  name: {{ .vault.auth.jwt.sa }}
-  namespace: {{ .namespace }}
+  name: {{ $.vault.auth.jwt.sa }}
+  namespace: {{ $.vault.auth.jwt.sanamespace }}
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .vault.auth.jwt.sa }}-token
-  namespace: {{ .namespace }}
+  name: {{ $.vault.auth.jwt.sa }}-token
+  namespace: {{ $.vault.auth.jwt.sanamespace }}
   annotations:
-    kubernetes.io/service-account.name: {{ .vault.auth.jwt.sa }}
+    kubernetes.io/service-account.name: {{ $.vault.auth.jwt.sa }}
+type: kubernetes.io/service-account-token
+---
+{{- else }}
+apiVersion: external-secrets.io/v1beta1
+kind: ClusterSecretStore
+metadata:
+  name: {{ .Values.name }}
+spec:
+  provider:
+    vault:
+      server: {{ .Values.vault.server }}
+      path: {{ .Values.vault.path }}
+      version: {{ .Values.vault.version }}
+      auth:
+        # VaultJwt authenticates with Vault using the JWT/OIDC auth mechanism
+        # https://www.vaultproject.io/docs/auth/jwt
+        jwt:
+          # Path where the JWT authentication backend is mounted
+          path: {{ .Values.vault.auth.jwt.path }}
+          # JWT role configured in a Vault server, optional.
+          role: {{ .Values.vault.auth.jwt.role }}
+          kubernetesServiceAccountToken:
+            serviceAccountRef:
+              name: {{ .Values.vault.auth.jwt.sa }}
+              namespace: {{ .Values.namespace }}
+            # `expirationSeconds` defaults to 10 minutes if not supplied
+            expirationSeconds: {{ .Values.vault.auth.jwt.expiration }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: {{ .Values.vault.auth.jwt.sa }}-auth-delegator
+roleRef:
+  kind: ClusterRole
+  apiGroup: rbac.authorization.k8s.io
+  name: system:auth-delegator
+subjects:
+- kind: ServiceAccount
+  name: {{ .Values.vault.auth.jwt.sa }}
+  namespace: {{ .Values.namespace }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Values.vault.auth.jwt.sa }}-token
+  namespace: {{ .Values.namespace }}
+  annotations:
+    kubernetes.io/service-account.name: {{ .Values.vault.auth.jwt.sa }}
 type: kubernetes.io/service-account-token
 ---
 {{- end }}
