Fix rendering error

--- a/charts/eso-clustersecretstore/templates/clustersecretstore.yaml
+++ b/charts/eso-clustersecretstore/templates/clustersecretstore.yaml
@@ -15,37 +15,37 @@ spec:
         # https://www.vaultproject.io/docs/auth/jwt
         jwt:
           # Path where the JWT authentication backend is mounted
-          path: {{ $.vault.auth.jwt.path }}
+          path: {{ $.Values.vault.auth.jwt.path }}
           # JWT role configured in a Vault server, optional.
-          role: {{ $.vault.auth.jwt.role }}
+          role: {{ $.Values.vault.auth.jwt.role }}
           kubernetesServiceAccountToken:
             serviceAccountRef:
-              name: {{ $.vault.auth.jwt.sa }}
-              namespace: {{ $.vault.auth.jwt.sanamespace }}
+              name: {{ $.Values.vault.auth.jwt.sa }}
+              namespace: {{ $.Values.vault.auth.jwt.sanamespace }}
             # `expirationSeconds` defaults to 10 minutes if not supplied
-            expirationSeconds: {{ $.vault.auth.jwt.expiration }}
+            expirationSeconds: {{ $.Values.vault.auth.jwt.expiration }}
 ---
 {{- end }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ $.vault.auth.jwt.sa }}-auth-delegator
+  name: {{ .Values.vault.auth.jwt.sa }}-auth-delegator
 roleRef:
   kind: ClusterRole
   apiGroup: rbac.authorization.k8s.io
   name: system:auth-delegator
 subjects:
 - kind: ServiceAccount
-  name: {{ $.vault.auth.jwt.sa }}
-  namespace: {{ $.vault.auth.jwt.sanamespace }}
+  name: {{ .Values.vault.auth.jwt.sa }}
+  namespace: {{ .Values.vault.auth.jwt.sanamespace }}
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ $.vault.auth.jwt.sa }}-token
-  namespace: {{ $.vault.auth.jwt.sanamespace }}
+  name: {{ .Values.vault.auth.jwt.sa }}-token
+  namespace: {{ .Values.vault.auth.jwt.sanamespace }}
   annotations:
-    kubernetes.io/service-account.name: {{ $.vault.auth.jwt.sa }}
+    kubernetes.io/service-account.name: {{ .Values.auth.jwt.sa }}
 type: kubernetes.io/service-account-token
 ---
 {{- else }}
