--- a/charts/eso-clustersecretstore/templates/clustersecretstore.yaml
+++ b/charts/eso-clustersecretstore/templates/clustersecretstore.yaml
@@ -45,7 +45,7 @@ metadata:
   name: {{ .Values.vault.auth.jwt.sa }}-token
   namespace: {{ .Values.vault.auth.jwt.sanamespace }}
   annotations:
-    kubernetes.io/service-account.name: {{ .Values.auth.jwt.sa }}
+    kubernetes.io/service-account.name: {{ .Values.vault.auth.jwt.sa }}
 type: kubernetes.io/service-account-token
 ---
 {{- else }}
