--- a/charts/weblate/Chart.yaml
+++ b/charts/weblate/Chart.yaml
@@ -8,4 +8,4 @@ appVersion: 0.0.1
 dependencies:
 - name: weblate
   version: 0.4.31
-  repository: https://helm.weblate.org/weblate/
+  repository: https://helm.weblate.org
