--- a/charts/opentelemetry-collector/templates/clusterrole.yaml
+++ b/charts/opentelemetry-collector/templates/clusterrole.yaml
@@ -19,6 +19,12 @@ rules:
   - apiGroups: [""]
     resources: ["pods", "namespaces"]
     verbs: ["get", "watch", "list"]
+  - apiGroups: ["apps"]
+    resources: ["replicasets"]
+    verbs: ["get", "list", "watch"]
+  - apiGroups: ["extensions"]
+    resources: ["replicasets"]
+    verbs: ["get", "list", "watch"]
   {{- end }}
   {{- if .Values.presets.clusterMetrics.enabled}}
   - apiGroups: [""]
@@ -45,6 +51,6 @@ rules:
   {{- if .Values.presets.kubernetesEvents.enabled }}
   - apiGroups: ["events.k8s.io"]
     resources: ["events"]
-    verbs: ["watch"]
+    verbs: ["watch", "list"]
   {{- end }}
 {{- end }}
