--- a/charts/opentelemetry-collector/templates/ingress.yaml
+++ b/charts/opentelemetry-collector/templates/ingress.yaml
@@ -9,6 +9,7 @@ metadata:
   {{- else }}
   name: {{ include "opentelemetry-collector.fullname" $ }}
   {{- end }}
+  namespace: {{ template "opentelemetry-collector.namespace" $ }}
   labels:
     {{- include "opentelemetry-collector.labels" $ | nindent 4 }}
     {{- include "opentelemetry-collector.component" $ | nindent 4 }}
@@ -27,7 +28,7 @@ spec:
     {{- range .tls }}
     - hosts:
         {{- range .hosts }}
-        - {{ . | quote }}
+        - {{ tpl . $ | quote }}
         {{- end }}
       {{- with .secretName }}
       secretName: {{ . }}
@@ -36,7 +37,7 @@ spec:
   {{- end }}
   rules:
     {{- range .hosts }}
-    - host: {{ .host | quote }}
+    - host: {{ tpl .host $ | quote }}
       http:
         paths:
           {{- range .paths }}
