--- a/charts/opentelemetry-collector/values.yaml
+++ b/charts/opentelemetry-collector/values.yaml
@@ -8,6 +8,9 @@ fullnameOverride: ""
 # Valid values are "daemonset", "deployment", and "statefulset".
 mode: ""
 
+# Specify which namespace should be used to deploy the resources into
+namespaceOverride: ""
+
 # Handles basic configuration of components that
 # also require k8s modifications to work correctly.
 # .Values.config can be used to modify/add to a preset
@@ -22,41 +25,56 @@ presets:
   # Adds the filelog receiver to the logs pipeline
   # and adds the necessary volumes and volume mounts.
   # Best used with mode = daemonset.
+  # See https://opentelemetry.io/docs/kubernetes/collector/components/#filelog-receiver for details on the receiver.
   logsCollection:
     enabled: false
     includeCollectorLogs: false
     # Enabling this writes checkpoints in /var/lib/otelcol/ host directory.
     # Note this changes collector's user to root, so that it can write to host directory.
     storeCheckpoints: false
+    # The maximum bytes size of the recombined field.
+    # Once the size exceeds the limit, all received entries of the source will be combined and flushed.
+    maxRecombineLogSize: 102400
   # Configures the collector to collect host metrics.
   # Adds the hostmetrics receiver to the metrics pipeline
   # and adds the necessary volumes and volume mounts.
   # Best used with mode = daemonset.
+  # See https://opentelemetry.io/docs/kubernetes/collector/components/#host-metrics-receiver for details on the receiver.
   hostMetrics:
     enabled: false
   # Configures the Kubernetes Processor to add Kubernetes metadata.
   # Adds the k8sattributes processor to all the pipelines
   # and adds the necessary rules to ClusteRole.
   # Best used with mode = daemonset.
+  # See https://opentelemetry.io/docs/kubernetes/collector/components/#kubernetes-attributes-processor for details on the receiver.
   kubernetesAttributes:
+    enabled: false
+    # When enabled the processor will extra all labels for an associated pod and add them as resource attributes.
+    # The label's exact name will be the key.
+    extractAllPodLabels: false
+    # When enabled the processor will extra all annotations for an associated pod and add them as resource attributes.
+    # The annotation's exact name will be the key.
+    extractAllPodAnnotations: false
+  # Configures the collector to collect node, pod, and container metrics from the API server on a kubelet..
+  # Adds the kubeletstats receiver to the metrics pipeline
+  # and adds the necessary rules to ClusteRole.
+  # Best used with mode = daemonset.
+  # See https://opentelemetry.io/docs/kubernetes/collector/components/#kubeletstats-receiver for details on the receiver.
+  kubeletMetrics:
     enabled: false
   # Configures the collector to collect kubernetes events.
   # Adds the k8sobject receiver to the logs pipeline
   # and collects kubernetes events by default.
   # Best used with mode = deployment or statefulset.
+  # See https://opentelemetry.io/docs/kubernetes/collector/components/#kubernetes-objects-receiver for details on the receiver.
   kubernetesEvents:
     enabled: false
   # Configures the Kubernetes Cluster Receiver to collect cluster-level metrics.
   # Adds the k8s_cluster receiver to the metrics pipeline
   # and adds the necessary rules to ClusteRole.
   # Best used with mode = deployment or statefulset.
+  # See https://opentelemetry.io/docs/kubernetes/collector/components/#kubernetes-cluster-receiver for details on the receiver.
   clusterMetrics:
-    enabled: false
-  # Configures the collector to collect Kubelet metrics.
-  # Adds the kubeletstats receiver to the metrics pipeline
-  # and adds the necessary rules to ClusteRole.
-  # Best used with mode = daemonset.
-  kubeletMetrics:
     enabled: false
 
 configMap:
@@ -68,6 +86,9 @@ configMap:
 # For example, {{ REDACTED_EMAIL }} becomes {{` {{ REDACTED_EMAIL }} `}}.
 config:
   exporters:
+    debug: {}
+    # Will be removed in a future release.
+    # Use the debug exporter instead.
     logging: {}
   extensions:
     # The health_check extension is mandatory for this chart.
@@ -83,17 +104,17 @@ config:
     jaeger:
       protocols:
         grpc:
-          endpoint: ${MY_POD_IP}:14250
+          endpoint: ${env:MY_POD_IP}:14250
         thrift_http:
-          endpoint: ${MY_POD_IP}:14268
+          endpoint: ${env:MY_POD_IP}:14268
         thrift_compact:
-          endpoint: ${MY_POD_IP}:6831
+          endpoint: ${env:MY_POD_IP}:6831
     otlp:
       protocols:
         grpc:
-          endpoint: ${MY_POD_IP}:4317
+          endpoint: ${env:MY_POD_IP}:4317
         http:
-          endpoint: ${MY_POD_IP}:4318
+          endpoint: ${env:MY_POD_IP}:4318
     prometheus:
       config:
         scrape_configs:
@@ -101,20 +122,20 @@ config:
             scrape_interval: 10s
             static_configs:
               - targets:
-                  - ${MY_POD_IP}:8888
+                  - ${env:MY_POD_IP}:8888
     zipkin:
-      endpoint: ${MY_POD_IP}:9411
+      endpoint: ${env:MY_POD_IP}:9411
   service:
     telemetry:
       metrics:
-        address: ${MY_POD_IP}:8888
+        address: ${env:MY_POD_IP}:8888
     extensions:
       - health_check
       - memory_ballast
     pipelines:
       logs:
         exporters:
-          - logging
+          - debug
         processors:
           - memory_limiter
           - batch
@@ -122,7 +143,7 @@ config:
           - otlp
       metrics:
         exporters:
-          - logging
+          - debug
         processors:
           - memory_limiter
           - batch
@@ -131,7 +152,7 @@ config:
           - prometheus
       traces:
         exporters:
-          - logging
+          - debug
         processors:
           - memory_limiter
           - batch
@@ -295,18 +316,25 @@ ports:
 resources: {}
 # resources:
 #   limits:
-#     cpu: 256m
+#     cpu: 250m
 #     memory: 512Mi
 
 podAnnotations: {}
 
 podLabels: {}
 
+# Common labels to add to all otel-collector resources. Evaluated as a template.
+additionalLabels: {}
+#  app.kubernetes.io/part-of: my-app
+
 # Host networking requested for this pod. Use the host's network namespace.
 hostNetwork: false
 
 # Pod DNS policy ClusterFirst, ClusterFirstWithHostNet, None, Default, None
 dnsPolicy: ""
+
+# Custom DNS config. Required when DNS policy is None.
+dnsConfig: {}
 
 # only used with deployment mode
 replicaCount: 1
@@ -363,12 +391,64 @@ lifecycleHooks: {}
 #       - /test/sleep
 #       - "5"
 
+# liveness probe configuration
+# Ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+##
+livenessProbe:
+  # Number of seconds after the container has started before startup, liveness or readiness probes are initiated.
+  # initialDelaySeconds: 1
+  # How often in seconds to perform the probe.
+  # periodSeconds: 10
+  # Number of seconds after which the probe times out.
+  # timeoutSeconds: 1
+  # Minimum consecutive failures for the probe to be considered failed after having succeeded.
+  # failureThreshold: 1
+  # Duration in seconds the pod needs to terminate gracefully upon probe failure.
+  # terminationGracePeriodSeconds: 10
+  httpGet:
+    port: 13133
+    path: /
+
+# readiness probe configuration
+# Ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+##
+readinessProbe:
+  # Number of seconds after the container has started before startup, liveness or readiness probes are initiated.
+  # initialDelaySeconds: 1
+  # How often (in seconds) to perform the probe.
+  # periodSeconds: 10
+  # Number of seconds after which the probe times out.
+  # timeoutSeconds: 1
+  # Minimum consecutive successes for the probe to be considered successful after having failed.
+  # successThreshold: 1
+  # Minimum consecutive failures for the probe to be considered failed after having succeeded.
+  # failureThreshold: 1
+  httpGet:
+    port: 13133
+    path: /
+
 service:
+  # Enable the creation of a Service.
+  # By default, it's enabled on mode != daemonset.
+  # However, to enable it on mode = daemonset, its creation must be explicitly enabled
+  # enabled: true
+
   type: ClusterIP
   # type: LoadBalancer
   # loadBalancerIP: 1.2.3.4
   # loadBalancerSourceRanges: []
+
+  # By default, Service of type 'LoadBalancer' will be created setting 'externalTrafficPolicy: Cluster'
+  # unless other value is explicitly set.
+  # Possible values are Cluster or Local (https://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/#preserving-the-client-source-ip)
+  # externalTrafficPolicy: Cluster
+
   annotations: {}
+
+  # By default, Service will be created setting 'internalTrafficPolicy: Local' on mode = daemonset
+  # unless other value is explicitly set.
+  # Setting 'internalTrafficPolicy: Cluster' on a daemonset is not recommended
+  # internalTrafficPolicy: Cluster
 
 ingress:
   enabled: false
@@ -438,6 +518,7 @@ autoscaling:
   enabled: false
   minReplicas: 1
   maxReplicas: 10
+  behavior: {}
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
@@ -514,3 +595,11 @@ networkPolicy:
   #    ports:
   #      - port: 1234
   #        protocol: TCP
+
+# When enabled, the chart will set the GOMEMLIMIT env var to 80% of the configured
+# resources.limits.memory and remove the memory ballast extension.
+# If no resources.limits.memory are defined enabling does nothing.
+# In a future release this setting will be enabled by default.
+# See https://github.com/open-telemetry/opentelemetry-helm-charts/issues/891
+# for more details.
+useGOMEMLIMIT: true
