Add imagePullSecrets to ara helm chart

--- a/charts/ara/templates/deployment.yaml
+++ b/charts/ara/templates/deployment.yaml
@@ -6,6 +6,10 @@ metadata:
   labels:
     app: ara
 spec:
+  {{- with .Values.imagePullSecrets }}
+  imagePullSecrets:
+    {{- toYaml . | nindent 8 }}
+  {{- end }}
   replicas: {{ $.Values.replicas }}
   selector:
     matchLabels:
