Update Jaeger helm chart to latest

--- a/charts/jaeger/templates/query-deploy.yaml
+++ b/charts/jaeger/templates/query-deploy.yaml
@@ -23,6 +23,9 @@ spec:
       {{- if .Values.query.config }}
         checksum/ui-config: {{ include (print $.Template.BasePath "/query-configmap.yaml") . | sha256sum }}
       {{- end }}
+      {{- if and .Values.query.oAuthSidecar.enabled .Values.query.oAuthSidecar.config }}
+        checksum/oauth2-config: {{ sha256sum .Values.query.oAuthSidecar.config }}
+      {{- end }}
       {{- if .Values.query.podAnnotations }}
         {{- toYaml .Values.query.podAnnotations | nindent 8 }}
       {{- end }}
@@ -44,6 +47,10 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- if .Values.query.initContainers }}
+      initContainers:
+      {{- toYaml .Values.query.initContainers | nindent 8 }}
+      {{- end}} 
       containers:
       - name: {{ template "jaeger.query.name" . }}
         securityContext:
