--- a/charts/jaeger/Chart.yaml
+++ b/charts/jaeger/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-appVersion: 1.51.0
+appVersion: 1.53.0
 dependencies:
 - condition: provisionDataStore.cassandra
   name: cassandra
@@ -12,10 +12,10 @@ dependencies:
 - condition: provisionDataStore.kafka
   name: kafka
   repository: https://charts.bitnami.com/bitnami
-  version: ^19.1.5
+  version: ^26.6.2
 - name: common
   repository: https://charts.bitnami.com/bitnami
-  version: 1.16.0
+  version: 2.x.x
 description: A Jaeger Helm chart for Kubernetes
 home: https://jaegertracing.io
 icon: https://camo.githubusercontent.com/afa87494e0753b4b1f5719a2f35aa5263859dffb/687474703a2f2f6a61656765722e72656164746865646f63732e696f2f656e2f6c61746573742f696d616765732f6a61656765722d766563746f722e737667
@@ -40,4 +40,4 @@ name: jaeger
 sources:
 - https://hub.docker.com/u/jaegertracing/
 type: application
-version: 0.72.1
+version: 1.0.2
