--- a/charts/jaeger/templates/allinone-collector-svc.yaml
+++ b/charts/jaeger/templates/allinone-collector-svc.yaml
@@ -12,21 +12,36 @@ spec:
     - name: http-zipkin
       port: 9411
       targetPort: 0
+      {{- if semverCompare ">=1.20" .Capabilities.KubeVersion.Version }}
+      appProtocol: http
+      {{- end }}
     - name: grpc-http
       port: 14250
       targetPort: 0
+      {{- if semverCompare ">=1.20" .Capabilities.KubeVersion.Version }}
+      appProtocol: grpc
+      {{- end }}
     - name: c-tchan-trft
       port: 14267
       targetPort: 0
     - name: http-c-binary-trft
       port: 14268
       targetPort: 0
+      {{- if semverCompare ">=1.20" .Capabilities.KubeVersion.Version }}
+      appProtocol: http
+      {{- end }}
     - name: {{ .Values.allInOne.service.collector.otlp.grpc.name }}
       port: 4317
       targetPort: 0
+      {{- if semverCompare ">=1.20" .Capabilities.KubeVersion.Version }}
+      appProtocol: grpc
+      {{- end }}
     - name: {{ .Values.allInOne.service.collector.otlp.http.name }}
       port: 4318
       targetPort: 0
+      {{- if semverCompare ">=1.20" .Capabilities.KubeVersion.Version }}
+      appProtocol: http
+      {{- end }}
   selector:
     {{- include "jaeger.selectorLabels" . | nindent 4 }}
     app.kubernetes.io/component: all-in-one
