--- a/charts/jaeger/templates/allinone-sa.yaml
+++ b/charts/jaeger/templates/allinone-sa.yaml
@@ -6,4 +6,8 @@ metadata:
   labels:
     {{- include "jaeger.labels" . | nindent 4 }}
     app.kubernetes.io/component: all-in-one
+  {{- with .Values.allInOne.serviceAccount.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 {{- end -}}
