--- a/charts/jaeger/templates/collector-svc.yaml
+++ b/charts/jaeger/templates/collector-svc.yaml
@@ -19,6 +19,9 @@ spec:
 {{- end }}
     protocol: TCP
     targetPort: grpc
+    {{- if semverCompare ">=1.20" .Capabilities.KubeVersion.Version }}
+    appProtocol: grpc
+    {{- end }}
   - name: http
     port: {{ .Values.collector.service.http.port }}
 {{- if and (eq .Values.collector.service.type "NodePort") (.Values.collector.service.http.nodePort) }}
@@ -26,6 +29,9 @@ spec:
 {{- end }}
     protocol: TCP
     targetPort: http
+    {{- if semverCompare ">=1.20" .Capabilities.KubeVersion.Version }}
+    appProtocol: http
+    {{- end }}
 {{- if .Values.collector.service.zipkin }}
   - name: zipkin
     port: {{ .Values.collector.service.zipkin.port }}
@@ -34,6 +40,9 @@ spec:
 {{- end }}
     protocol: TCP
     targetPort: zipkin
+    {{- if semverCompare ">=1.20" .Capabilities.KubeVersion.Version }}
+    appProtocol: http
+    {{- end }}
 {{- end }}
 {{- if or .Values.collector.service.otlp.grpc .Values.collector.service.otlp.http }}
   - name: {{ .Values.collector.service.otlp.grpc.name }}
@@ -61,8 +70,5 @@ spec:
   clusterIP: {{ .Values.collector.service.clusterIP }}
   {{- end }}
   type: {{ .Values.collector.service.type }}
-  {{- if and (eq .Values.collector.service.type "LoadBalancer") .Values.collector.service.loadBalancerIP }}
-  loadBalancerIP: {{ .Values.collector.service.loadBalancerIP }}
-  {{- end -}}
 {{- template "loadBalancerSourceRanges" .Values.collector }}
 {{- end -}}
