--- a/charts/jaeger/templates/es-lookback-sa.yaml
+++ b/charts/jaeger/templates/es-lookback-sa.yaml
@@ -6,5 +6,9 @@ metadata:
   labels:
     {{- include "jaeger.labels" . | nindent 4 }}
     app.kubernetes.io/component: es-lookback
+  {{- with .Values.esLookback.serviceAccount.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 automountServiceAccountToken: {{ .Values.esLookback.serviceAccount.automountServiceAccountToken }}
 {{- end -}}
