--- a/charts/jaeger/templates/ingester-deploy.yaml
+++ b/charts/jaeger/templates/ingester-deploy.yaml
@@ -50,6 +50,10 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- if .Values.ingester.initContainers }}
+      initContainers:
+      {{- toYaml .Values.ingester.initContainers | nindent 8 }}
+      {{- end}}
       containers:
       - name: {{ include "jaeger.fullname" . }}-ingester
         securityContext:
