--- a/charts/jaeger/values.yaml
+++ b/charts/jaeger/values.yaml
@@ -40,6 +40,8 @@ allInOne:
   #       "param": 1
   #     }
   #   }
+  serviceAccount:
+    annotations: {}
   service:
     headless: true
     collector:
@@ -174,12 +176,27 @@ cassandra:
 
 # Begin: Override values on the Kafka subchart to customize for Jaeger
 kafka:
-  replicaCount: 1
-  autoCreateTopicsEnable: true
-  zookeeper:
-    replicaCount: 1
-    serviceAccount:
-      create: true
+  listeners:
+    client:
+      protocol: PLAINTEXT
+    controller:
+      protocol: PLAINTEXT
+    interbroker:
+      protocol: PLAINTEXT
+    external:
+      protocol: PLAINTEXT
+  controller:
+    replicaCount: 3
+    extraConfig: |
+      auto.create.topics.enable=true
+# Zookeeper has been deprecated by Kafka in favor of Kraft Mode: https://developer.confluent.io/learn/kraft/
+# Documentation for upgrading Kafka and keeping Zookeeper: https://github.com/bitnami/charts/tree/main/bitnami/kafka#upgrading-from-zookeeper-mode
+# Documentation for migrating away from Zookeeper to Kraft Mode: https://github.com/bitnami/charts/tree/main/bitnami/kafka#migrating-from-zookeeper-early-access
+  # zookeeper:
+  #   enabled: false
+  #   replicaCount: 1
+  #   serviceAccount:
+  #     create: true
 
 # End: Override values on the Kafka subchart to customize for Jaeger
 
@@ -261,6 +278,7 @@ ingester:
     create: true
     # Explicitly mounts the API credentials for the Service Account
     automountServiceAccountToken: false
+    annotations: {}
     name:
   nodeSelector: {}
   tolerations: []
@@ -273,6 +291,7 @@ ingester:
   extraConfigmapMounts: []
   extraEnv: []
   envFrom: []
+  initContainers: []
 
   serviceMonitor:
     enabled: false
@@ -530,6 +549,7 @@ collector:
 query:
   enabled: true
   basePath: /
+  initContainers: []
   oAuthSidecar:
     enabled: false
     resources:
@@ -702,6 +722,7 @@ spark:
     #   memory: 128Mi
   serviceAccount:
     create: true
+    annotations: {}
     # Explicitly mounts the API credentials for the Service Account
     automountServiceAccountToken: false
     name:
@@ -746,6 +767,7 @@ esIndexCleaner:
   numberOfDays: 7
   serviceAccount:
     create: true
+    annotations: {}
     # Explicitly mounts the API credentials for the Service Account
     automountServiceAccountToken: false
     name:
@@ -841,6 +863,7 @@ esLookback:
     #   memory: 128Mi
   serviceAccount:
     create: true
+    annotations: {}
     # Explicitly mounts the API credentials for the Service Account
     automountServiceAccountToken: false
     name:
@@ -917,6 +940,7 @@ hotrod:
     create: true
     # Explicitly mounts the API credentials for the Service Account
     automountServiceAccountToken: false
+    annotations: {}
     name:
   nodeSelector: {}
   tolerations: []
