Fix netbox chart

--- a/charts/netbox/templates/tests/test-connection.yaml
+++ b/charts/netbox/templates/tests/test-connection.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.test }}
 apiVersion: v1
 kind: Pod
 metadata:
@@ -18,3 +19,4 @@ spec:
       {{- toYaml .Values.test.resources | nindent 6 }}
     {{- end }}
   restartPolicy: Never
+{{- end }}
