--- a/charts/netbox/templates/Secret/external-db.yaml
+++ b/charts/netbox/templates/Secret/external-db.yaml
@@ -1,8 +1,8 @@
-{{- if and (not .Values.postgresql.enabled) (not .Values.externalDatabase.existingSecretName) (not .Values.postgresql.existingSecret) }}
+{{- if and (not .Values.postgresql.enabled) (not .Values.postgresql.existingSecret) (not .Values.externalDatabase.existingSecretName)  }}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ printf "%s-external-db" (include "netbox.fullname" .) }}
+  name: {{ printf "%s-%s" (include "netbox.fullname" .) "external-db" }}
   namespace: {{ include "common.names.namespace" . | quote }}
   labels: {{- include "common.labels.standard" (dict "customLabels" .Values.commonLabels "context" $) | nindent 4 }}
   {{- if or .Values.externalDatabase.annotations .Values.commonAnnotations }}
@@ -10,5 +10,5 @@ metadata:
   {{- end }}
 type: Opaque
 data:
-  db-password: {{ include "common.secrets.passwords.manage" (dict "secret" (printf "%s-%s" (include "netbox.fullname" .) "external-db") "key" "db-password" "length" 32 "providedValues" (list "externalDatabase.password") "context" $) }}
+  {{ include "netbox.databaseSecretPasswordKey" . }}: {{ include "netbox.databasePassword" }}
 {{- end }}
