--- a/charts/netbox/templates/Secret/external-redis.yaml
+++ b/charts/netbox/templates/Secret/external-redis.yaml
@@ -1,4 +1,4 @@
-{{- if and (not .Values.redis.enabled) (not .Values.externalRedis.existingSecretName) (not .Values.tasksRedis.existingSecretName) (not .Values.cachingRedis.existingSecretName) (not .Values.redis.existingSecret) -}}
+{{- if and (not .Values.redis.enabled) (not .Values.redis.existingSecret) (not .Values.externalRedis.existingSecretName) (not .Values.tasksRedis.existingSecretName) (not .Values.cachingRedis.existingSecretName)  -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -12,4 +12,5 @@ type: Opaque
 data:
   {{ include "netbox.cachingRedis.secretPasswordKey" . }}: {{ include "netbox.cachingRedis.password" . }}
   {{ include "netbox.tasksRedis.secretPasswordKey" . }}: {{ include "netbox.tasksRedis.password" . }}
+  {{ include "netbox.redis.secretPasswordKey" . }}: {{ include "netbox.redis.password" . }}
 {{- end -}}
