--- a/charts/rancher/Chart.yaml
+++ b/charts/rancher/Chart.yaml
@@ -1,16 +1,16 @@
 apiVersion: v2
-appVersion: v2.7.5
+name: rancher
 description: Install Rancher Server to manage Kubernetes clusters across providers.
+version: 2.8.4
+appVersion: v.2.8.4
+kubeVersion: < 1.35.0-0
 home: https://rancher.com
 icon: https://github.com/rancher/ui/blob/master/public/assets/images/logos/welcome-cow.svg
 keywords:
-- rancher
-kubeVersion: < 1.30.0-0
-maintainers:
-- email: charts@rancher.com
-  name: Rancher Labs
-name: rancher
+  - rancher
 sources:
-- https://github.com/rancher/rancher
-- https://github.com/rancher/server-chart
-version: 2.7.5
+  - https://github.com/rancher/rancher
+  - https://github.com/rancher/server-chart
+maintainers:
+  - name: Rancher Labs
+    email: charts@rancher.com
