--- a/charts/jaeger/Chart.yaml
+++ b/charts/jaeger/Chart.yaml
@@ -7,18 +7,18 @@ dependencies:
   version: 0.15.3
 - condition: provisionDataStore.elasticsearch
   name: elasticsearch
-  repository: https://helm.elastic.co
-  version: ^7.11.1
+  repository: https://charts.bitnami.com/bitnami
+  version: 20.0.4
 - condition: provisionDataStore.kafka
   name: kafka
   repository: https://charts.bitnami.com/bitnami
-  version: ^26.6.2
+  version: 26.6.2
 - name: common
   repository: https://charts.bitnami.com/bitnami
   version: 2.x.x
 description: A Jaeger Helm chart for Kubernetes
 home: https://jaegertracing.io
-icon: https://camo.githubusercontent.com/afa87494e0753b4b1f5719a2f35aa5263859dffb/687474703a2f2f6a61656765722e72656164746865646f63732e696f2f656e2f6c61746573742f696d616765732f6a61656765722d766563746f722e737667
+icon: https://www.jaegertracing.io/img/jaeger-icon-reverse-color.svg
 keywords:
 - jaeger
 - opentracing
@@ -36,8 +36,10 @@ maintainers:
   name: naseemkullah
 - email: me@pavelnikolov.net
   name: pavelnikolov
+- email: jkowall@kowall.net
+  name: jkowall
 name: jaeger
 sources:
 - https://hub.docker.com/u/jaegertracing/
 type: application
-version: 1.0.3
+version: 3.1.0
