--- a/charts/jaeger/templates/allinone-sa.yaml
+++ b/charts/jaeger/templates/allinone-sa.yaml
@@ -10,4 +10,5 @@ metadata:
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+automountServiceAccountToken: {{ .Values.allInOne.serviceAccount.automountServiceAccountToken }}
 {{- end -}}
