--- a/charts/jaeger/templates/hotrod-ing.yaml
+++ b/charts/jaeger/templates/hotrod-ing.yaml
@@ -20,7 +20,7 @@ spec:
   {{- end }}
   rules:
     {{- range $host := .Values.hotrod.ingress.hosts }}
-    - host: {{ $host }}
+    - host: {{ $host | quote}}
       http:
         paths:
           - path: /
