--- a/charts/jaeger/templates/query-ing.yaml
+++ b/charts/jaeger/templates/query-ing.yaml
@@ -22,7 +22,7 @@ spec:
   {{- end }}
   rules:
     {{- range $host := .Values.query.ingress.hosts }}
-    - host: {{ $host }}
+    - host: {{ $host | quote }}
       http:
         paths:
           - path: {{ $basePath }}
