--- a/charts/opentelemetry-collector/values.yaml
+++ b/charts/opentelemetry-collector/values.yaml
@@ -80,6 +80,9 @@ presets:
 configMap:
   # Specifies whether a configMap should be created (true by default)
   create: true
+  # Specifies an existing ConfigMap to be mounted to the pod
+  # The ConfigMap MUST include the collector configuration via a key named 'relay' or the collector will not start.
+  existingName: ""
 
 # Base collector configuration.
 # Supports templating. To escape existing instances of {{ }}, use {{` <original content> `}}.
@@ -87,9 +90,6 @@ configMap:
 config:
   exporters:
     debug: {}
-    # Will be removed in a future release.
-    # Use the debug exporter instead.
-    logging: {}
   extensions:
     # The health_check extension is mandatory for this chart.
     # Without the health_check extension the collector will fail the readiness and liveliness probes.
@@ -164,7 +164,7 @@ config:
 
 image:
   # If you want to use the core image `otel/opentelemetry-collector`, you also need to change `command.name` value to `otelcol`.
-  repository: otel/opentelemetry-collector-contrib
+  repository: ""
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
@@ -174,7 +174,7 @@ imagePullSecrets: []
 
 # OpenTelemetry Collector executable
 command:
-  name: otelcol-contrib
+  name: ""
   extraArgs: []
 
 serviceAccount:
@@ -262,6 +262,8 @@ extraObjects: []
   #         app.kubernetes.io/part-of: argocd
 
 extraVolumes: []
+
+# This also supports template content, which will eventually be converted to yaml.
 extraVolumeMounts: []
 
 # Configuration for ports
@@ -352,7 +354,8 @@ revisionHistoryLimit: 10
 
 annotations: {}
 
-# List of extra sidecars to add
+# List of extra sidecars to add.
+# This also supports template content, which will eventually be converted to yaml.
 extraContainers: []
 # extraContainers:
 #   - name: test
@@ -367,6 +370,7 @@ extraContainers: []
 #         mountPath: /test
 
 # List of init container specs, e.g. for copying a binary to be executed as a lifecycle hook.
+# This also supports template content, which will eventually be converted to yaml.
 # Another usage of init containers is e.g. initializing filesystem permissions to the OTLP Collector user `10001` in case you are using persistence and the volume is producing a permission denied error for the OTLP Collector container.
 initContainers: []
 # initContainers:
@@ -551,6 +555,11 @@ statefulset:
   # volumeClaimTemplates for a statefulset
   volumeClaimTemplates: []
   podManagementPolicy: "Parallel"
+  # Controls if and how PVCs created by the StatefulSet are deleted. Available in Kubernetes 1.23+.
+  persistentVolumeClaimRetentionPolicy:
+    enabled: false
+    whenDeleted: Retain
+    whenScaled: Retain
 
 networkPolicy:
   enabled: false
@@ -611,3 +620,6 @@ networkPolicy:
 # See https://github.com/open-telemetry/opentelemetry-helm-charts/issues/891
 # for more details.
 useGOMEMLIMIT: true
+
+# Allow containers to share processes across pod namespace
+shareProcessNamespace: false
