Try to fix ara resources rendering vol2

--- a/charts/ara/templates/deployment.yaml
+++ b/charts/ara/templates/deployment.yaml
@@ -35,8 +35,10 @@ spec:
             value: {{ $v | default "None" | quote }}
           {{- end }}
         {{- end }}
+        {{- if $.Values.resources }}
         resources:
-          {{-  toYaml $.Values.resources | nindent 8 }}
+          {{-  toYaml $.Values.resources | nindent 10 }}
+        {{- end }}
         {{- if $.Values.envFromSecret }}
         envFrom:
         - secretRef:
